--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "lightgallery": "^2.7.1",
-    "next": "^12.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^13.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-masonry-css": "^1.0.16",
     "tailwind-scrollbar": "^1.3.1",
